--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,17 @@ markdown: kramdown
 highlighter: rouge
 search : true
 
-plugins: [jekyll-paginate-v2]
+# plugins: [jekyll-paginate-v2]
+plugins:
+  - jekyll-paginate
+  - jemoji
+
 ############################################################
 # Site configuration for the Jekyll 3 Pagination Gem
 # The values here represent the defaults if nothing is set
 pagination:
-  
-  # Site-wide kill switch, disabled here it doesn't run at all 
+
+  # Site-wide kill switch, disabled here it doesn't run at all
   enabled: true
 
   # Set to 'true' to enable pagination debugging. This can be enabled in the site config or only for individual pagination pages
@@ -23,7 +27,7 @@ pagination:
 
   # The permalink structure for the paginated pages (this can be any level deep)
   permalink: '/page/:num/' # Pages are index.html inside this folder (default)
-  #permalink: '/page/:num.html' # Pages are simple html files 
+  #permalink: '/page/:num.html' # Pages are simple html files
   #permalink: '/page/:num' # Pages are html files, linked jekyll extensionless permalink style.
 
   # Optional the title format for the paginated pages (supports :title for original page title, :num for pagination page number, :max for total number of pages)
@@ -31,7 +35,7 @@ pagination:
 
   # Limit how many pagenated pages to create (default: 0, means all)
   limit: 0
-  
+
   # Optional, defines the field that the posts should be sorted on (omit to default to 'date')
   sort_field: 'date'
 
@@ -44,13 +48,13 @@ pagination:
   # Optional, the default tag to use, omit to disable
   tag: ''
 
-  # Optional, the default locale to use, omit to disable (depends on a field 'locale' to be specified in the posts, 
+  # Optional, the default locale to use, omit to disable (depends on a field 'locale' to be specified in the posts,
   # in reality this can be any value, suggested are the Microsoft locale-codes (e.g. en_US, en_GB) or simply the ISO-639 language code )
-  locale: '' 
+  locale: ''
 
- # Optional,omit or set both before and after to zero to disable. 
- # Controls how the pagination trail for the paginated pages look like. 
-  trail: 
+ # Optional,omit or set both before and after to zero to disable.
+ # Controls how the pagination trail for the paginated pages look like.
+  trail:
     before: 2
     after: 2
 
@@ -69,30 +73,30 @@ pagination:
 # The values here represent the defaults if nothing is set
 autopages:
 
-  # Site-wide kill switch, disable here and it doesn't run at all 
+  # Site-wide kill switch, disable here and it doesn't run at all
   enabled: false
 
   # Category pages, omit entire config element to disable
-  categories: 
+  categories:
     # Optional, the list of layouts that should be processed for every category found in the site
-    layouts: 
+    layouts:
       - 'autopage_category.html'
     # Optional, the title that each category paginate page should get (:cat is replaced by the Category name)
     title: 'Posts in category :cat'
-    # Optional, the permalink for the  pagination page (:cat is replaced), 
+    # Optional, the permalink for the  pagination page (:cat is replaced),
     # the pagination permalink path is then appended to this permalink structure
     permalink: '/category/:cat'
 
   # Collection pages, omit to disable
   collections:
-    layouts: 
+    layouts:
       - 'autopage_collection.html'
     title: 'Posts in collection :coll' # :coll is replaced by the collection name
     permalink: '/collection/:coll'
-  
+
   # Tag pages, omit to disable
   tags:
-    layouts: 
+    layouts:
       - 'autopage_tags.html'
     title: 'Posts tagged with :tag' # :tag is replaced by the tag name
     permalink: '/tag/:tag'
