--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ plugins:
   - jekyll-paginate
   - jemoji
 
+markdown: kramdown
+
 ############################################################
 # Site configuration for the Jekyll 3 Pagination Gem
 # The values here represent the defaults if nothing is set
