--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,30 @@ highlighter: rouge
 search : true
 
 plugins:
-  - jekyll-paginate-v2
+  - jekyll-paginate
   - jemoji
 
-markdown: kramdown
+# Navigation (2nd level links supported)
+nav:
+  Home:
+    - '/'
+  Blog:
+    - '/blog/'
+    - { Categories: '/blog/categories/' }
+    - { Tags: '/blog/tags/' }
+  About:
+    - '/about/'
+
+# Where are tags and categories displayed
+tag_page: '/blog/tags/'
+category_page: '/blog/categories/'
+
+comments:
+provider: "disqus"
+disqus:
+    shortname: "he_wu"
+default:
+    comments: true
 
 ############################################################
 # Site configuration for the Jekyll 3 Pagination Gem
@@ -27,7 +47,7 @@ pagination:
   per_page: 10
 
   # The permalink structure for the paginated pages (this can be any level deep)
-  permalink: '/page/:num/' # Pages are index.html inside this folder (default)
+  # permalink: '/page/:num/' # Pages are index.html inside this folder (default)
   #permalink: '/page/:num.html' # Pages are simple html files
   #permalink: '/page/:num' # Pages are html files, linked jekyll extensionless permalink style.
 
@@ -44,10 +64,10 @@ pagination:
   sort_reverse: true
 
   # Optional, the default category to use, omit or just leave this as 'posts' to get a backwards-compatible behavior (all posts)
-  category: 'posts'
+  category: 'categories'
 
   # Optional, the default tag to use, omit to disable
-  tag: ''
+  tag: 'tags'
 
   # Optional, the default locale to use, omit to disable (depends on a field 'locale' to be specified in the posts,
   # in reality this can be any value, suggested are the Microsoft locale-codes (e.g. en_US, en_GB) or simply the ISO-639 language code )
