--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,6 @@ search : true
 future: true
 
 plugins:
-  - jekyll-paginate
   - jemoji
 
 # Navigation (2nd level links supported)
@@ -19,13 +18,13 @@ nav:
   About:
     - '/about/'
 
-# Where are tags and categories displayed
-tag_page: '/blog/tags/'
-category_page: '/blog/categories/'
+category_archive:
+  type: liquid
+  path: /blog/categories/
 
-# Fix archieve 
-category_archive_path: "/blog/categories/#"
-tag_archive_path: "/blog/tags/#"
+tag_archive:
+  type: liquid
+  path: '/blog/tags/'
 
 comments:
 provider: "disqus"
@@ -33,68 +32,3 @@ disqus:
     shortname: "he_wu"
 default:
     comments: true
-
-############################################################
-# Site configuration for the Jekyll 3 Pagination Gem
-# The values here represent the defaults if nothing is set
-pagination:
-
-  # Site-wide kill switch, disabled here it doesn't run at all
-  enabled: true
-
-  # Set to 'true' to enable pagination debugging. This can be enabled in the site config or only for individual pagination pages
-  debug: false
-
-  # The default document collection to paginate if nothing is specified ('posts' is default)
-  collection: 'posts'
-
-  # How many objects per paginated page, used to be `paginate` (default: 0, means all)
-  per_page: 10
-
-  # The permalink structure for the paginated pages (this can be any level deep)
-  # permalink: '/page/:num/' # Pages are index.html inside this folder (default)
-  #permalink: '/page/:num.html' # Pages are simple html files
-  #permalink: '/page/:num' # Pages are html files, linked jekyll extensionless permalink style.
-
-  # Optional the title format for the paginated pages (supports :title for original page title, :num for pagination page number, :max for total number of pages)
-  title: ':title - page :num'
-
-  # Limit how many pagenated pages to create (default: 0, means all)
-  limit: 0
-
-  # Optional, defines the field that the posts should be sorted on (omit to default to 'date')
-  sort_field: 'date'
-
-  # Optional, sorts the posts in reverse order (omit to default decending or sort_reverse: true)
-  sort_reverse: true
-
-  # Optional, the default category to use, omit or just leave this as 'posts' to get a backwards-compatible behavior (all posts)
-  category: 'categories'
-
-  # Optional, the default tag to use, omit to disable
-  tag: 'tags'
-
-  # Optional, the default locale to use, omit to disable (depends on a field 'locale' to be specified in the posts,
-  # in reality this can be any value, suggested are the Microsoft locale-codes (e.g. en_US, en_GB) or simply the ISO-639 language code )
-  locale: ''
-
- # Optional,omit or set both before and after to zero to disable.
- # Controls how the pagination trail for the paginated pages look like.
-  trail:
-    before: 2
-    after: 2
-
-  # Optional, the default file extension for generated pages (e.g html, json, xml).
-  # Internally this is set to html by default
-  extension: html
-
-  # Optional, the default name of the index file for generated pages (e.g. 'index.html')
-  # Without file extension
-  indexpage: 'about'
-
-  # https://github.com/sverrirs/jekyll-paginate-v2/blob/master/README-GENERATOR.md
-  # page genarate path
-  paginate: 8
-  paginate_path: "/blog/page:num/"
-
-############################################################
